--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
 
-    <div class="container caro">
+    <div class="caro">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
